Forsøk på løse problem med ajourhold, lagt på div logging